// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Layout should render 1`] = `
.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c17 {
  width: 50px;
  height: 55px;
}

.c19 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 i {
  font-size: 1.3em;
}

.c19:hover {
  background-color: #EC7E00;
}

.c19:focus {
  background-color: #EC7E00;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1140px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 20px;
}

.c12 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c13 {
  background-color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c14:not(:first-of-type) {
  margin-left: 5px;
}

.c14:not(:last-of-type):after {
  content: ' | ';
  margin-left: 3px;
}

.c14:last-of-type {
  margin-right: 1px;
}

.c15 {
  font-weight: 300;
}

.c16 {
  font-weight: 300;
  margin-right: 3px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c11 {
  margin-bottom: 120px;
  padding: 0 10px;
}

.c18 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:992px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:600px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    padding: 15px 35px;
  }
}

@media only screen and (min-width:1024px) {
  .c10 {
    padding: 15px 48px;
  }
}

@media only screen and (min-width:1200px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:375px) {
  .c14:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c14:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:375px) {
  .c14:last-of-type {
    margin-right: 3px;
  }
}

@media only screen and (max-width:330px) {
  .c14 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c15 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c16 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:768px) {
  .c11 {
    padding: 0 20px;
    margin-bottom: 80px;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
    data-testid="header"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5 "
          >
            <h1
              class="c6"
              data-testid="logo"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10 grid-container"
      >
        <a
          class="c5"
        >
          &lt; BACK
        </a>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c11"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14"
      >
        <a
          class="c5"
          href="https://github.com/jdmiguel/foodublin"
        >
          GITHUB
        </a>
      </div>
      <div
        class="c14"
      >
        <p
          class="c15"
        >
          FOODUBLIN ©2020
        </p>
      </div>
      <div
        class="c14"
      >
        <p
          class="c16"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app/"
        >
          JDMIGUEL
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c17 c18"
  >
    <button
      class="c19"
      type="button"
    >
      <i
        class="material-icons"
      >
        arrow_upward
      </i>
    </button>
  </div>
</div>
`;

exports[`Component: Layout should render the extended footer 1`] = `
.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c17 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
  pointer-events: none;
  color: #A7A7A7;
  font-weight: 400;
}

.c17 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c23 {
  width: 50px;
  height: 55px;
}

.c25 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 i {
  font-size: 1.3em;
}

.c25:hover {
  background-color: #EC7E00;
}

.c25:focus {
  background-color: #EC7E00;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1140px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 20px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  white-space: nowrap;
  margin: 0 5px 3px 0;
}

.c12 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c19 {
  background-color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c20:not(:first-of-type) {
  margin-left: 5px;
}

.c20:not(:last-of-type):after {
  content: ' | ';
  margin-left: 3px;
}

.c20:last-of-type {
  margin-right: 1px;
}

.c21 {
  font-weight: 300;
}

.c22 {
  font-weight: 300;
  margin-right: 3px;
}

.c13 {
  border-top: 1px solid #D8D8D8;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 20px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c11 {
  margin-bottom: 120px;
  padding: 0 10px;
}

.c24 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:330px) {
  .c17 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c17 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c17:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:992px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:600px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    padding: 15px 35px;
  }
}

@media only screen and (min-width:1024px) {
  .c10 {
    padding: 15px 48px;
  }
}

@media only screen and (min-width:1200px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:600px) {
  .c15 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (max-width:330px) {
  .c18 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c18 {
    margin: 0 5px 0 0;
  }
}

@media only screen and (min-width:375px) {
  .c20:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c20:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:375px) {
  .c20:last-of-type {
    margin-right: 3px;
  }
}

@media only screen and (max-width:330px) {
  .c20 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c21 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c22 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:600px) {
  .c14 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c14 {
    padding: 15px 35px;
  }
}

@media only screen and (min-width:1024px) {
  .c14 {
    padding: 15px 48px;
  }
}

@media only screen and (min-width:1200px) {
  .c14 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c11 {
    padding: 0 20px;
    margin-bottom: 80px;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
    data-testid="header"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5 "
          >
            <h1
              class="c6"
              data-testid="logo"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10 grid-container"
      >
        <a
          class="c5"
        >
          &lt; BACK
        </a>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c11"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c12"
  >
    <div
      class="c13"
    >
      <div
        class="c14 grid-container"
      >
        <div
          class="c15"
          data-testid="breadcrumbs"
        >
          <div
            class="c16"
          >
            <a
              class="c17 c18"
              disabled=""
            >
              Home
            </a>
          </div>
        </div>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
    <div
      class="c19"
    >
      <div
        class="c20"
      >
        <a
          class="c5"
          href="https://github.com/jdmiguel/foodublin"
        >
          GITHUB
        </a>
      </div>
      <div
        class="c20"
      >
        <p
          class="c21"
        >
          FOODUBLIN ©2020
        </p>
      </div>
      <div
        class="c20"
      >
        <p
          class="c22"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app/"
        >
          JDMIGUEL
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c23 c24"
  >
    <button
      class="c25"
      type="button"
    >
      <i
        class="material-icons"
      >
        arrow_upward
      </i>
    </button>
  </div>
</div>
`;

exports[`Component: Layout should render the extended header 1`] = `
.c6 {
  width: 225px;
  margin: 15px 0 25px;
}

.c7 {
  max-width: 300px;
}

.c4 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c4 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c13 {
  width: 100%;
  border-radius: 4px;
  padding: 0 20px;
  background: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 i {
  font-size: 1.2rem;
  color: #A7A7A7;
  margin-right: 10px;
}

.c15 {
  width: 100%;
  height: 55px;
  padding: 10px 0;
  line-height: 20px;
  border: none;
  outline: none;
  color: #2f3235;
  background: transparent;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c26 {
  color: #585858;
  font-size: 1.2rem;
  font-weight: 500;
}

.c11 {
  width: 100%;
  max-width: 550px;
  height: 55px;
  position: relative;
  cursor: pointer;
}

.c14 {
  background-color: #F3F3F3;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c14:hover {
  background-color: #FDF3E5;
}

.c16 {
  visibility: hidden;
  opacity: 0;
  -webkit-transform: translateY(10px);
  -ms-transform: translateY(10px);
  transform: translateY(10px);
  -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
  -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
  transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background: #F3F3F3;
  z-index: 2;
  top: 55px;
  left: 0;
  padding: 0;
  width: 100%;
  height: auto;
  max-height: 400px;
  overflow: auto;
  box-shadow: 0 2px 2px rgba(0,0,0,0.35);
  border: 1px solid #F3F3F3;
  border-radius: 0 0 4px 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
  border-top: 0;
}

.c17 {
  width: 100%;
  -webkit-tap-highlight-color: transparent;
}

.c20 {
  width: 100%;
  max-width: 550px;
  height: 100%;
  position: initial;
}

.c22 {
  position: relative;
  border-radius: 4px;
  background-color: #F3F3F3;
}

.c23 {
  width: 100%;
  height: 55px;
  background-color: #F3F3F3;
  line-height: 55px;
  padding: 0 4px 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
}

.c23 i:first-of-type {
  font-size: 1rem;
  margin-left: 5px;
  margin-right: 10px;
  color: #D48C24;
}

.c23:hover {
  background-color: #FDF3E5;
}

.c23 i:last-of-type {
  position: absolute;
  z-index: 1;
  top: 14px;
  right: 7px;
  font-size: 1.7rem;
}

.c24 {
  visibility: hidden;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.2s ease 0s;
  transition: opacity 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background-color: #F3F3F3;
  z-index: 2;
  top: 0;
  left: 0;
  padding: 20px 10px 10px;
  width: 100%;
  height: 100%;
  max-height: 100vh;
  border: 1px solid #F3F3F3;
  border-radius: 4px;
  border-top: 0;
  border-bottom: 0;
  outline: none;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 10px;
  margin: 10px 0 15px;
}

.c27 {
  font-size: 1.35rem;
}

.c28 {
  cursor: pointer;
  line-height: 0;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  margin-top: 4px;
}

.c28 i {
  font-size: 1.1rem;
  font-weight: 600;
}

.c28 i {
  color: #585858;
  font-size: 1.5rem;
}

.c29 {
  width: 100%;
  height: 55px;
  border-bottom: 1px solid #E5EAED;
  list-style: none;
  display: block;
  overflow: hidden;
  color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 9px 11px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c29:hover {
  background-color: #FDF3E5;
}

.c29:focus {
  background-color: #FDF3E5;
}

.c31 {
  width: 18px;
  margin-right: 12px;
}

.c30 {
  color: #2f3235;
  font-size: 1rem;
  font-weight: 400;
}

.c32 {
  width: 100%;
  height: 55px;
}

.c41 {
  width: 50px;
  height: 55px;
}

.c34 {
  width: 100%;
  height: 100%;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  padding: 0 15px;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c34 i {
  margin-right: 6px;
  font-size: 1.3em;
}

.c34:hover {
  background-color: #EC7E00;
}

.c34:focus {
  background-color: #EC7E00;
}

.c43 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43 i {
  font-size: 1.3em;
}

.c43:hover {
  background-color: #EC7E00;
}

.c43:focus {
  background-color: #EC7E00;
}

.c9 {
  width: 85%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  margin: 0 0 25px;
}

.c18 {
  background-color: #A7A7A7;
  width: 100%;
  height: 1px;
  margin: 0 0 25px 0;
  max-width: 550px;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 22px;
}

.c19:first-child {
  margin-right: 2%;
}

.c21 {
  width: 100%;
}

.c21:first-of-type {
  margin-right: 2%;
  margin-bottom: 15px;
}

.c33 {
  width: 100%;
  margin-bottom: 10px;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c2 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 550px;
}

.c3 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  font-size: 1.25rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  margin-bottom: 35px;
}

.c36 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c37 {
  background-color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c38:not(:first-of-type) {
  margin-left: 5px;
}

.c38:not(:last-of-type):after {
  content: ' | ';
  margin-left: 3px;
}

.c38:last-of-type {
  margin-right: 1px;
}

.c39 {
  font-weight: 300;
}

.c40 {
  font-weight: 300;
  margin-right: 3px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c35 {
  margin-bottom: 120px;
  padding: 0 10px;
}

.c42 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:768px) {
  .c6 {
    width: 270px;
  }
}

@media only screen and (min-width:992px) {
  .c6 {
    width: 300px;
    margin: 0 0 30px;
  }
}

@media only screen and (min-width:330px) {
  .c4 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c4 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c4:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:768px) {
  .c13 {
    max-width: 550px;
  }
}

@media only screen and (min-width:992px) {
  .c26 {
    font-size: 1.45rem;
  }
}

@media only screen and (min-width:768px) {
  .c20 {
    height: 55px;
    position: relative;
  }
}

@media only screen and (min-width:768px) {
  .c24 {
    max-height: 440px;
    height: auto;
    padding: 0;
    box-shadow: 0 2px 2px rgba(0,0,0,0.35);
    -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
    -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    -webkit-transform: translateY( 20px );
    -ms-transform: translateY( 20px );
    transform: translateY( 20px );
  }
}

@media only screen and (min-width:768px) {
  .c25 {
    display: none;
  }
}

@media only screen and (min-width:992px) {
  .c30 {
    font-size: 0.9rem;
  }
}

@media only screen and (min-width:470px) {
  .c9 {
    width: 70%;
  }
}

@media only screen and (min-width:768px) {
  .c9 {
    width: 60%;
  }
}

@media only screen and (min-width:992px) {
  .c9 {
    width: 58rem;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media only screen and (min-width:1250px) {
  .c9 {
    width: 71rem;
  }
}

@media only screen and (min-width:992px) {
  .c12 {
    margin: 0 2% 0 0;
    width: 39%;
  }
}

@media only screen and (min-width:1200px) {
  .c12 {
    width: 44%;
  }
}

@media only screen and (min-width:992px) {
  .c18 {
    width: 1px;
    height: 90%;
    margin: 0 2% 0 0;
  }
}

@media only screen and (min-width:768px) {
  .c19 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media only screen and (min-width:992px) {
  .c19 {
    width: 47%;
    -webkit-box-pack: space-around;
    -webkit-justify-content: space-around;
    -ms-flex-pack: space-around;
    justify-content: space-around;
    margin-bottom: 0;
  }

  .c19:first-child {
    margin-right: 0;
  }
}

@media only screen and (min-width:768px) {
  .c21 {
    max-width: 270px;
  }

  .c21:first-of-type {
    margin-bottom: 0;
  }
}

@media only screen and (min-width:992px) {
  .c21 {
    margin-right: 2%;
    width: 48%;
  }
}

@media only screen and (min-width:768px) {
  .c33 {
    width: 300px;
    margin-bottom: 0;
  }
}

@media only screen and (min-width:992px) {
  .c33 {
    width: 10%;
  }
}

@media only screen and (min-width:992px) {
  .c2 {
    height: 440px;
  }
}

@media only screen and (min-width:768px) {
  .c5 {
    opacity: 0;
    -webkit-animation-name: ilnhTV;
    animation-name: ilnhTV;
    -webkit-animation-duration: 0.25s;
    animation-duration: 0.25s;
    -webkit-animation-delay: 0.15s;
    animation-delay: 0.15s;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
}

@media only screen and (min-width:350px) {
  .c8 {
    font-size: 1.45rem;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    font-size: 2rem;
    opacity: 0;
    -webkit-animation-name: ilnhTV;
    animation-name: ilnhTV;
    -webkit-animation-duration: 0.35s;
    animation-duration: 0.35s;
    -webkit-animation-delay: 0.25s;
    animation-delay: 0.25s;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 2.5rem;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    opacity: 0;
    -webkit-animation-name: ilnhTV;
    animation-name: ilnhTV;
    -webkit-animation-duration: 0.45s;
    animation-duration: 0.45s;
    -webkit-animation-delay: 0.55s;
    animation-delay: 0.55s;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
}

@media only screen and (min-width:375px) {
  .c38:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c38:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:375px) {
  .c38:last-of-type {
    margin-right: 3px;
  }
}

@media only screen and (max-width:330px) {
  .c38 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c39 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c40 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:768px) {
  .c35 {
    padding: 0 20px;
    margin-bottom: 80px;
  }
}

<div
  class="c0"
>
  <header
    class=""
    data-testid="header"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <a
            class="c4 c5"
          >
            <h1
              class="c6"
              data-testid="logo"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
          <div
            class="c9 c10"
            data-testid="finder"
          >
            <div
              class="c11 c12"
              data-testid="autocomplete"
            >
              <div
                class="c13 c14"
                data-testid="input-wrapper"
              >
                <i
                  class="material-icons"
                  data-testid="input-icon"
                >
                  search
                </i>
                <input
                  class="c15"
                  placeholder="Search for locals..."
                  type="text"
                  value=""
                />
              </div>
              <div
                class="c16"
                data-testid="listbox-wrapper"
              >
                <ul
                  class="c17"
                  role="listbox"
                />
              </div>
            </div>
            <span
              class="c18"
            />
            <div
              class="c19"
            >
              <div
                class="c20 c21"
                data-testid="dropdown"
              >
                <div
                  class="c22"
                >
                  <button
                    class="c23"
                    type="button"
                  >
                    <i
                      class="material-icons"
                      data-testid="label-icon"
                    >
                      near_me
                    </i>
                    <span>
                      Select any location
                    </span>
                    <i
                      class="material-icons"
                    >
                      arrow_drop_down
                    </i>
                  </button>
                </div>
                <div
                  class="c24"
                  data-testid="dropdown-list"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    class="c25"
                  >
                    <h4
                      class="c26 c27"
                    >
                      Select any location
                    </h4>
                    <button
                      class="c28"
                      type="button"
                    >
                      <i
                        class="material-icons"
                      >
                        close
                      </i>
                    </button>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Dublin
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      South City West
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Temple Bar
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Clondalkin
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Swords
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Tallaght
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Blanchardstown
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      South City East
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Dundrum
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Finglas
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Ballyfermot
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Santry
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Lucan
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Artane
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Malahide
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Dun Laoghaire
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Walkinstown
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Blackrock
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Palmerstown
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Rathmines
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Balbriggan
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Ballybrack
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Smithfield
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Crumlin
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Castleknock
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Howth
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Cabra
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Whitehall
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Portmarnock
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <p
                      class="c30"
                    >
                      Kimmage
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="c20 c21"
                data-testid="dropdown"
              >
                <div
                  class="c22"
                >
                  <button
                    class="c23"
                    type="button"
                  >
                    <i
                      class="material-icons"
                      data-testid="label-icon"
                    >
                      restaurant
                    </i>
                    <span>
                      Select any cuisine
                    </span>
                    <i
                      class="material-icons"
                    >
                      arrow_drop_down
                    </i>
                  </button>
                </div>
                <div
                  class="c24"
                  data-testid="dropdown-list"
                  role="listbox"
                  tabindex="0"
                >
                  <div
                    class="c25"
                  >
                    <h4
                      class="c26 c27"
                    >
                      Select any cuisine
                    </h4>
                    <button
                      class="c28"
                      type="button"
                    >
                      <i
                        class="material-icons"
                      >
                        close
                      </i>
                    </button>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Irish"
                      class="c31"
                      src="/images/stew.svg"
                    />
                    <p
                      class="c30"
                    >
                      Irish
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Italian"
                      class="c31"
                      src="/images/pizza.svg"
                    />
                    <p
                      class="c30"
                    >
                      Italian
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Mediterranean"
                      class="c31"
                      src="/images/bruschetta.svg"
                    />
                    <p
                      class="c30"
                    >
                      Mediterranean
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Asian"
                      class="c31"
                      src="/images/rice.svg"
                    />
                    <p
                      class="c30"
                    >
                      Asian
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Healthy Food"
                      class="c31"
                      src="/images/healthy_food.svg"
                    />
                    <p
                      class="c30"
                    >
                      Healthy Food
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Indian"
                      class="c31"
                      src="/images/gulab.svg"
                    />
                    <p
                      class="c30"
                    >
                      Indian
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Mexican"
                      class="c31"
                      src="/images/taco.svg"
                    />
                    <p
                      class="c30"
                    >
                      Mexican
                    </p>
                  </div>
                  <div
                    class="c29"
                    role="option"
                  >
                    <img
                      alt="Fast Food"
                      class="c31"
                      src="/images/fries.svg"
                    />
                    <p
                      class="c30"
                    >
                      Fast Food
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c32 c33"
            >
              <button
                class="c34"
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
  <main
    class="c35"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c36"
  >
    <div
      class="c37"
    >
      <div
        class="c38"
      >
        <a
          class="c4"
          href="https://github.com/jdmiguel/foodublin"
        >
          GITHUB
        </a>
      </div>
      <div
        class="c38"
      >
        <p
          class="c39"
        >
          FOODUBLIN ©2020
        </p>
      </div>
      <div
        class="c38"
      >
        <p
          class="c40"
        >
          BY
        </p>
        <a
          class="c4"
          href="https://jdmiguel.netlify.app/"
        >
          JDMIGUEL
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c41 c42"
  >
    <button
      class="c43"
      type="button"
    >
      <i
        class="material-icons"
      >
        arrow_upward
      </i>
    </button>
  </div>
</div>
`;

exports[`Component: Layout should render the footer veil 1`] = `
.c6 {
  width: 190px;
}

.c7 {
  max-width: 300px;
}

.c5 {
  font-size: 0.85rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 600;
  cursor: pointer;
  color: #FBA52B;
}

.c5 i {
  font-size: 0.8em;
  margin-right: 4px;
}

.c18 {
  width: 50px;
  height: 55px;
}

.c20 {
  width: 50px;
  height: 50px;
  -webkit-letter-spacing: 0.5px;
  -moz-letter-spacing: 0.5px;
  -ms-letter-spacing: 0.5px;
  letter-spacing: 0.5px;
  text-transform: uppercase;
  border-radius: 50%;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  cursor: pointer;
  outline: none;
  background-color: #FBA52B;
  color: #FFFFFF;
  font-weight: 600;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 i {
  font-size: 1.3em;
}

.c20:hover {
  background-color: #EC7E00;
}

.c20:focus {
  background-color: #EC7E00;
}

.c1 {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid #D8D8D8;
  background-image: url(/images/food.jpg);
  background-color: #A7A7A7;
  background-size: cover;
  background-position: center;
}

.c3 {
  width: 100%;
  background: rgba(0,0,0,0.8);
  height: 80px;
}

.c4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 1140px;
  margin: 0 auto;
}

.c8 {
  font-size: 1.3rem;
  text-align: center;
  font-weight: 400;
  color: #A7A7A7;
  display: none;
}

.c9 {
  background-color: #F3F3F3;
  border-bottom: 1px solid #D8D8D8;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 20px;
}

.c12 {
  width: 100%;
  position: absolute;
  left: 0;
  bottom: 0;
  overflow: hidden;
  z-index: 1;
}

.c13 {
  background-color: #F3F3F3;
  height: 170px;
  opacity: 0.6;
  -webkit-animation: hikGge 0.15s linear;
  animation: hikGge 0.15s linear;
}

.c14 {
  background-color: #660000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #D8D8D8;
}

.c15:not(:first-of-type) {
  margin-left: 5px;
}

.c15:not(:last-of-type):after {
  content: ' | ';
  margin-left: 3px;
}

.c15:last-of-type {
  margin-right: 1px;
}

.c16 {
  font-weight: 300;
}

.c17 {
  font-weight: 300;
  margin-right: 3px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
}

.c11 {
  margin-bottom: 120px;
  padding: 0 10px;
}

.c19 {
  position: fixed;
  bottom: 1%;
  right: 4%;
  z-index: 1;
  display: none;
  -webkit-animation: RcxFP 0.15s linear;
  animation: RcxFP 0.15s linear;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:992px) {
  .c6 {
    width: 200px;
  }
}

@media only screen and (min-width:330px) {
  .c5 {
    font-size: 1rem;
  }
}

@media only screen and (min-width:540px) {
  .c5 {
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
  }

  .c5:hover {
    color: #EC7E00;
  }
}

@media only screen and (min-width:992px) {
  .c3 {
    height: 80px;
  }
}

@media only screen and (min-width:1200px) {
  .c4 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:350px) {

}

@media only screen and (min-width:768px) {
  .c8 {
    display: block;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 1.6rem;
  }
}

@media only screen and (min-width:600px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c10 {
    padding: 15px 35px;
  }
}

@media only screen and (min-width:1024px) {
  .c10 {
    padding: 15px 48px;
  }
}

@media only screen and (min-width:1200px) {
  .c10 {
    padding: 15px 30px;
  }
}

@media only screen and (min-width:768px) {
  .c13 {
    height: 150px;
  }
}

@media only screen and (min-width:375px) {
  .c15:not(:first-of-type) {
    margin-left: 7px;
  }
}

@media only screen and (min-width:375px) {
  .c15:not(:last-of-type):after {
    margin-left: 5px;
  }
}

@media only screen and (min-width:375px) {
  .c15:last-of-type {
    margin-right: 3px;
  }
}

@media only screen and (max-width:330px) {
  .c15 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c16 {
    font-size: 0.85rem;
  }
}

@media only screen and (max-width:330px) {
  .c17 {
    font-size: 0.85rem;
  }
}

@media only screen and (min-width:768px) {
  .c11 {
    padding: 0 20px;
    margin-bottom: 80px;
  }
}

<div
  class="c0"
>
  <header
    class="c1"
    data-testid="header"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <a
            class="c5 "
          >
            <h1
              class="c6"
              data-testid="logo"
            >
              <img
                alt="FooDublin Logo"
                class="c7"
                src="/images/logo.svg"
              />
            </h1>
          </a>
          <h2
            class="c8"
          >
            Discover the best food in Dublin
          </h2>
        </div>
      </div>
    </div>
    <div
      class="c9"
    >
      <div
        class="c10 grid-container"
      >
        <a
          class="c5"
        >
          &lt; BACK
        </a>
        <a
          class="c5"
        >
          <i
            class="material-icons"
          >
            bookmarks
          </i>
          FAVORITES
        </a>
      </div>
    </div>
  </header>
  <main
    class="c11"
  >
    <div>
      <h1>
        Hello World
      </h1>
    </div>
  </main>
  <footer
    class="c12"
  >
    <div
      class="c13"
    />
    <div
      class="c14"
    >
      <div
        class="c15"
      >
        <a
          class="c5"
          href="https://github.com/jdmiguel/foodublin"
        >
          GITHUB
        </a>
      </div>
      <div
        class="c15"
      >
        <p
          class="c16"
        >
          FOODUBLIN ©2020
        </p>
      </div>
      <div
        class="c15"
      >
        <p
          class="c17"
        >
          BY
        </p>
        <a
          class="c5"
          href="https://jdmiguel.netlify.app/"
        >
          JDMIGUEL
        </a>
      </div>
    </div>
  </footer>
  <div
    class="c18 c19"
  >
    <button
      class="c20"
      type="button"
    >
      <i
        class="material-icons"
      >
        arrow_upward
      </i>
    </button>
  </div>
</div>
`;
